# ITMOAaDS

./: .gitignore  README.md
hw1/: hw1.tex
hw10/: hw10.tex
hw2/: hw2.tex
hw3/: hw3.tex
hw4/: hw4.tex
hw5/: hw5.tex
hw6/: hw6.tex
hw9/: hw9.tex
lab1/: A.c  B.c  C.c  CMakeLists.txt  D.c  E.c  F.c  G.c  H.c
lab2/: A.c  B.c  C.c  CMakeLists.txt  D.c  E.c  F.c  G.c  H.c  I.c  J.c  K.c  L.c  M.c  N.c  O.c  run
lab3/: A.c  B.c  D.c  F.c
